# cli-parsers-17.06

./: .gitignore  .travis.yml  Makefile  README.md  requirements-ci.txt  requirements-dev.txt  setup.cfg  tox.ini
cli_parsers/: exceptions.py  virsh_list.py
tests/: test_virsh_list.py
