[metadata]
name = cli_parsers
version = attr: cli_parsers.__version__
description = My package description
long_description = file: README.md
keywords = cli_parsers
url = https://github.com/qrZt6y2S/cli-parsers-17.06
author = qrZt6y2S
author_email = qrZt6y2S@inbox.lv
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Utilities
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2.7

[options]
zip_safe = False
packages = find:
